--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <head>
         <title>How to make a webpage</title>
         <link rel="stylesheet" href="styles.css">
-        <meta >
+        <meta charset="UTF-8">
+        <meta name="description" content="An HTML webpage">
+        <meta name="keywords" content="HTML, CSS, JavaScript">
+        <meta name="author" content="Author name">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
+        <a 
         <button> Skip to end</button>
         <h1>Heading</h1>
         <h2>Sub-heading 1</h2>
